--- a/styles/styles.css
+++ b/styles/styles.css
@@ -277,6 +277,7 @@ header, footer, .blue-two, .blue-three, .green-one, .green-two, .green-three, .r
 #like-these-icons-our-heroes-stories-are-woven-into-the-fabric-of-our-lives {
   margin-block-start: 0;
   margin-block-end: 0;
+  width: 73%;
 }
 
 #give-us-just-a-moment {
